// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 32,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render inputHeight80 - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 80,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render labelHeight40 - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 40,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 32,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render labelWidth80 - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": 80,
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 32,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render labelfalse - value[0] 1`] = `
<div>
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 32,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render sizedefault - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 32,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render sizelarge - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 40,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render sizesmall - value[0] 1`] = `
<div>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":10}}"
    style={
      Object {
        "height": 20,
        "width": "30%",
      }
    }
  />
  <div
    className="skeleton {}"
    style={
      Object {
        "height": 24,
        "width": "100%",
      }
    }
  />
</div>
`;
